--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog da Dressinha</title>
+    <title>Blog teste - Django Girls</title>
 </head>
 
 <body>
@@ -18,9 +18,9 @@
 
     {% for post in posts %}
     <div>
-        <p>published: {{ post.published_date }}</p>
         <h2> <a href=""> {{ post.title}} </a></h2>
         <p> {{ post.text|linebreaksbr }} </p>
+        <p> <i>Published in: {{ post.published_date }}</i> </p>
     </div>
     {% endfor %}
 
